// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package protobuf_unittest_generated;
enum GeneratedSwiftReservedEnum {
  NONE = 0;
  adjusted = 1;
  allocate = 2;
  any = 3;
  AnyExtensionField = 4;
  AnyMessageExtension = 5;
  AnyMessageStorage = 6;
  AnyUnpackError = 7;
  Api = 8;
  appended = 9;
  appendUIntHex = 10;
  appendUnknown = 11;
  areAllInitialized = 12;
  array = 13;
  arrayLiteral = 14;
  arraySeparator = 15;
  as = 16;
  asciiOpenCurlyBracket = 17;
  asciiZero = 18;
  available = 19;
  b = 20;
  BaseType = 21;
  binary = 22;
  BinaryDecoder = 23;
  BinaryDecodingError = 24;
  BinaryDecodingOptions = 25;
  BinaryDelimited = 26;
  BinaryEncoder = 27;
  BinaryEncodingError = 28;
  BinaryEncodingMessageSetSizeVisitor = 29;
  BinaryEncodingMessageSetVisitor = 30;
  BinaryEncodingSizeVisitor = 31;
  BinaryEncodingVisitor = 32;
  bodySize = 33;
  Bool = 34;
  booleanLiteral = 35;
  BooleanLiteralType = 36;
  boolValue = 37;
  buffer = 38;
  bytes = 39;
  bytesInGroup = 40;
  bytesRead = 41;
  BytesValue = 42;
  c = 43;
  capacity = 44;
  capitalizeNext = 45;
  cardinality = 46;
  Character = 47;
  characters = 48;
  chars = 49;
  class = 50;
  clearExtensionValue = 51;
  clearSourceContext = 52;
  clearValue = 53;
  codeUnits = 54;
  Collection = 55;
  com = 56;
  comma = 57;
  contentsOf = 58;
  count = 59;
  countVarintsInBuffer = 60;
  customCodable = 61;
  CustomDebugStringConvertible = 62;
  d = 63;
  Data = 64;
  dataPointer = 65;
  dataResult = 66;
  dataSize = 67;
  date = 68;
  daySec = 69;
  daysSinceEpoch = 70;
  debugDescription = 71;
  decoded = 72;
  decodedFromJSONNull = 73;
  decodeExtensionField = 74;
  decodeExtensionFieldsAsMessageSet = 75;
  decodeJSON = 76;
  decodeMapField = 77;
  decodeMessage = 78;
  decoder = 79;
  decodeRepeated = 80;
  decodeRepeatedBoolField = 81;
  decodeRepeatedBytesField = 82;
  decodeRepeatedDoubleField = 83;
  decodeRepeatedEnumField = 84;
  decodeRepeatedFixed32Field = 85;
  decodeRepeatedFixed64Field = 86;
  decodeRepeatedFloatField = 87;
  decodeRepeatedGroupField = 88;
  decodeRepeatedInt32Field = 89;
  decodeRepeatedInt64Field = 90;
  decodeRepeatedMessageField = 91;
  decodeRepeatedSFixed32Field = 92;
  decodeRepeatedSFixed64Field = 93;
  decodeRepeatedSInt32Field = 94;
  decodeRepeatedSInt64Field = 95;
  decodeRepeatedStringField = 96;
  decodeRepeatedUInt32Field = 97;
  decodeRepeatedUInt64Field = 98;
  decodeSingular = 99;
  decodeSingularBoolField = 100;
  decodeSingularBytesField = 101;
  decodeSingularDoubleField = 102;
  decodeSingularEnumField = 103;
  decodeSingularFixed32Field = 104;
  decodeSingularFixed64Field = 105;
  decodeSingularFloatField = 106;
  decodeSingularGroupField = 107;
  decodeSingularInt32Field = 108;
  decodeSingularInt64Field = 109;
  decodeSingularMessageField = 110;
  decodeSingularSFixed32Field = 111;
  decodeSingularSFixed64Field = 112;
  decodeSingularSInt32Field = 113;
  decodeSingularSInt64Field = 114;
  decodeSingularStringField = 115;
  decodeSingularUInt32Field = 116;
  decodeSingularUInt64Field = 117;
  decodeTextFormat = 118;
  defaultAnyTypeURLPrefix = 119;
  defaultValue = 120;
  description = 121;
  Dictionary = 122;
  dictionaryLiteral = 123;
  digit = 124;
  digit0 = 125;
  digit1 = 126;
  digitCount = 127;
  digits = 128;
  digitValue = 129;
  discardableResult = 130;
  discardUnknownFields = 131;
  distance = 132;
  double = 133;
  doubleToUtf8 = 134;
  DoubleValue = 135;
  Duration = 136;
  E = 137;
  Element = 138;
  elements = 139;
  emitExtensionFieldName = 140;
  emitFieldName = 141;
  emitFieldNumber = 142;
  Empty = 143;
  emptyData = 144;
  encoded = 145;
  encodedJSONString = 146;
  encodedSize = 147;
  encodeField = 148;
  encoder = 149;
  end = 150;
  endArray = 151;
  endMessageField = 152;
  endObject = 153;
  endRegularField = 154;
  enum = 155;
  enumvalue = 156;
  Equatable = 157;
  Error = 158;
  ExpressibleByArrayLiteral = 159;
  ExpressibleByDictionaryLiteral = 160;
  ext = 161;
  extDecoder = 162;
  extendedGraphemeClusterLiteral = 163;
  ExtendedGraphemeClusterLiteralType = 164;
  ExtensibleMessage = 165;
  extension = 166;
  ExtensionField = 167;
  extensionFieldNumber = 168;
  ExtensionFieldValueSet = 169;
  ExtensionMap = 170;
  extensions = 171;
  extras = 172;
  f = 173;
  false = 174;
  field = 175;
  fieldData = 176;
  FieldMask = 177;
  fieldName = 178;
  fieldNameCount = 179;
  fieldNum = 180;
  fieldNumber = 181;
  fieldNumberForProto = 182;
  fields = 183;
  fieldSize = 184;
  FieldTag = 185;
  fieldType = 186;
  fieldValue = 187;
  fileName = 188;
  filter = 189;
  firstItem = 190;
  float = 191;
  floatLiteral = 192;
  FloatLiteralType = 193;
  floatToUtf8 = 194;
  FloatValue = 195;
  forMessageName = 196;
  formUnion = 197;
  forReadingFrom = 198;
  forTypeURL = 199;
  ForwardParser = 200;
  forWritingInto = 201;
  from = 202;
  fromAscii2 = 203;
  fromAscii4 = 204;
  fromHexDigit = 205;
  func = 206;
  G = 207;
  get = 208;
  getExtensionValue = 209;
  googleapis = 210;
  Google_Protobuf_Any = 211;
  Google_Protobuf_Api = 212;
  Google_Protobuf_BoolValue = 213;
  Google_Protobuf_BytesValue = 214;
  Google_Protobuf_DoubleValue = 215;
  Google_Protobuf_Duration = 216;
  Google_Protobuf_Empty = 217;
  Google_Protobuf_Enum = 218;
  Google_Protobuf_EnumValue = 219;
  Google_Protobuf_Field = 220;
  Google_Protobuf_FieldMask = 221;
  Google_Protobuf_FloatValue = 222;
  Google_Protobuf_Int32Value = 223;
  Google_Protobuf_Int64Value = 224;
  Google_Protobuf_ListValue = 225;
  Google_Protobuf_Method = 226;
  Google_Protobuf_Mixin = 227;
  Google_Protobuf_NullValue = 228;
  Google_Protobuf_Option = 229;
  Google_Protobuf_SourceContext = 230;
  Google_Protobuf_StringValue = 231;
  Google_Protobuf_Struct = 232;
  Google_Protobuf_Syntax = 233;
  Google_Protobuf_Timestamp = 234;
  Google_Protobuf_Type = 235;
  Google_Protobuf_UInt32Value = 236;
  Google_Protobuf_UInt64Value = 237;
  Google_Protobuf_Value = 238;
  group = 239;
  groupSize = 240;
  h = 241;
  handleConflictingOneOf = 242;
  hasExtensionValue = 243;
  hash = 244;
  Hashable = 245;
  hashValue = 246;
  HashVisitor = 247;
  hasSourceContext = 248;
  hasValue = 249;
  hour = 250;
  i = 251;
  index = 252;
  init = 253;
  inout = 254;
  insert = 255;
  Int = 256;
  Int32 = 257;
  Int32Value = 258;
  Int64 = 259;
  Int64Value = 260;
  Int8 = 261;
  integerLiteral = 262;
  IntegerLiteralType = 263;
  intern = 264;
  Internal = 265;
  InternalState = 266;
  ints = 267;
  isA = 268;
  isEqual = 269;
  isEqualTo = 270;
  isInitialized = 271;
  it = 272;
  itemTagsEncodedSize = 273;
  Iterator = 274;
  i_2166136261 = 275;
  JSONDecoder = 276;
  JSONDecodingError = 277;
  JSONDecodingOptions = 278;
  jsonEncoder = 279;
  JSONEncodingError = 280;
  JSONEncodingVisitor = 281;
  JSONMapEncodingVisitor = 282;
  jsonName = 283;
  jsonPath = 284;
  jsonPaths = 285;
  JSONScanner = 286;
  jsonString = 287;
  jsonText = 288;
  jsonUTF8Data = 289;
  k = 290;
  Key = 291;
  keyField = 292;
  KeyType = 293;
  kind = 294;
  l = 295;
  length = 296;
  let = 297;
  lhs = 298;
  list = 299;
  listOfMessages = 300;
  listValue = 301;
  littleEndian = 302;
  littleEndianBytes = 303;
  M = 304;
  major = 305;
  makeIterator = 306;
  mapHash = 307;
  MapKeyType = 308;
  mapNameResolver = 309;
  mapToMessages = 310;
  MapValueType = 311;
  mapVisitor = 312;
  mdayStart = 313;
  merge = 314;
  message = 315;
  messageDepthLimit = 316;
  MessageExtension = 317;
  MessageImplementationBase = 318;
  MessageSet = 319;
  messageType = 320;
  Method = 321;
  methods = 322;
  minor = 323;
  Mixin = 324;
  mixins = 325;
  month = 326;
  msgExtension = 327;
  mutating = 328;
  n = 329;
  name = 330;
  NameDescription = 331;
  NameMap = 332;
  nameResolver = 333;
  names = 334;
  nanos = 335;
  nativeBytes = 336;
  nativeEndianBytes = 337;
  newL = 338;
  newList = 339;
  newValue = 340;
  nextByte = 341;
  nextFieldNumber = 342;
  nil = 343;
  nilLiteral = 344;
  nullValue = 345;
  number = 346;
  numberValue = 347;
  of = 348;
  oneofIndex = 349;
  oneofs = 350;
  OneOf_Kind = 351;
  Option = 352;
  OptionalEnumExtensionField = 353;
  OptionalExtensionField = 354;
  OptionalGroupExtensionField = 355;
  OptionalMessageExtensionField = 356;
  options = 357;
  other = 358;
  others = 359;
  out = 360;
  output = 361;
  p = 362;
  packed = 363;
  PackedEnumExtensionField = 364;
  PackedExtensionField = 365;
  packedSize = 366;
  padding = 367;
  parent = 368;
  parse = 369;
  partial = 370;
  path = 371;
  paths = 372;
  payload = 373;
  payloadSize = 374;
  pointer = 375;
  pos = 376;
  prefix = 377;
  preTraverse = 378;
  proto2 = 379;
  proto3DefaultValue = 380;
  ProtobufAPIVersionCheck = 381;
  ProtobufAPIVersion_2 = 382;
  ProtobufBool = 383;
  ProtobufBytes = 384;
  ProtobufDouble = 385;
  ProtobufEnumMap = 386;
  protobufExtension = 387;
  ProtobufFixed32 = 388;
  ProtobufFixed64 = 389;
  ProtobufFloat = 390;
  ProtobufInt32 = 391;
  ProtobufInt64 = 392;
  ProtobufMap = 393;
  ProtobufMessageMap = 394;
  ProtobufSFixed32 = 395;
  ProtobufSFixed64 = 396;
  ProtobufSInt32 = 397;
  ProtobufSInt64 = 398;
  ProtobufString = 399;
  ProtobufUInt32 = 400;
  ProtobufUInt64 = 401;
  protobuf_extensionFieldValues = 402;
  protobuf_fieldNumber = 403;
  protobuf_generated_isEqualTo = 404;
  protobuf_nameMap = 405;
  protobuf_newField = 406;
  protobuf_package = 407;
  protocol = 408;
  protoFieldName = 409;
  protoMessageName = 410;
  ProtoNameProviding = 411;
  protoPaths = 412;
  public = 413;
  putBoolValue = 414;
  putBytesValue = 415;
  putDoubleValue = 416;
  putEnumValue = 417;
  putFixedUInt32 = 418;
  putFixedUInt64 = 419;
  putFloatValue = 420;
  putInt64 = 421;
  putStringValue = 422;
  putUInt64 = 423;
  putUInt64Hex = 424;
  putVarInt = 425;
  putZigZagVarInt = 426;
  rawChars = 427;
  RawRepresentable = 428;
  RawValue = 429;
  readBuffer = 430;
  register = 431;
  RepeatedEnumExtensionField = 432;
  RepeatedExtensionField = 433;
  RepeatedGroupExtensionField = 434;
  RepeatedMessageExtensionField = 435;
  requestStreaming = 436;
  requestTypeURL = 437;
  requiredSize = 438;
  responseStreaming = 439;
  responseTypeURL = 440;
  result = 441;
  return = 442;
  revision = 443;
  rhs = 444;
  root = 445;
  s = 446;
  sawBackslash = 447;
  sawSection4Characters = 448;
  sawSection5Characters = 449;
  scanner = 450;
  seconds = 451;
  self = 452;
  separator = 453;
  serialize = 454;
  serializedData = 455;
  serializedSize = 456;
  set = 457;
  setExtensionValue = 458;
  shift = 459;
  SimpleExtensionMap = 460;
  sizer = 461;
  source = 462;
  sourceContext = 463;
  sourceEncoding = 464;
  split = 465;
  start = 466;
  startArray = 467;
  startField = 468;
  startIndex = 469;
  startMessageField = 470;
  startObject = 471;
  startRegularField = 472;
  state = 473;
  static = 474;
  StaticString = 475;
  storage = 476;
  String = 477;
  stringLiteral = 478;
  StringLiteralType = 479;
  stringResult = 480;
  stringValue = 481;
  struct = 482;
  structValue = 483;
  subDecoder = 484;
  subscript = 485;
  subVisitor = 486;
  Swift = 487;
  SwiftProtobuf = 488;
  syntax = 489;
  T = 490;
  tag = 491;
  terminator = 492;
  testDecoder = 493;
  text = 494;
  textDecoder = 495;
  TextFormatDecoder = 496;
  TextFormatDecodingError = 497;
  TextFormatEncodingVisitor = 498;
  textFormatString = 499;
  throws = 500;
  timeInterval = 501;
  timeIntervalSince1970 = 502;
  timeIntervalSinceReferenceDate = 503;
  Timestamp = 504;
  total = 505;
  totalSize = 506;
  traverse = 507;
  true = 508;
  try = 509;
  type = 510;
  typealias = 511;
  typePrefix = 512;
  typeStart = 513;
  typeUnknown = 514;
  typeURL = 515;
  UInt32 = 516;
  UInt32Value = 517;
  UInt64 = 518;
  UInt64Value = 519;
  UInt8 = 520;
  unicodeScalarLiteral = 521;
  UnicodeScalarLiteralType = 522;
  unicodeScalars = 523;
  UnicodeScalarView = 524;
  union = 525;
  unknown = 526;
  unknownFields = 527;
  UnknownStorage = 528;
  unpackTo = 529;
  UnsafeBufferPointer = 530;
  UnsafeMutablePointer = 531;
  UnsafePointer = 532;
  updatedOptions = 533;
  url = 534;
  utf8 = 535;
  utf8Codec = 536;
  utf8ToDouble = 537;
  UTF8View = 538;
  v = 539;
  value = 540;
  valueField = 541;
  values = 542;
  ValueType = 543;
  var = 544;
  Version = 545;
  versionString = 546;
  visitExtensionFields = 547;
  visitExtensionFieldsAsMessageSet = 548;
  visitMapField = 549;
  visitor = 550;
  visitPacked = 551;
  visitPackedBoolField = 552;
  visitPackedDoubleField = 553;
  visitPackedEnumField = 554;
  visitPackedFixed32Field = 555;
  visitPackedFixed64Field = 556;
  visitPackedFloatField = 557;
  visitPackedInt32Field = 558;
  visitPackedInt64Field = 559;
  visitPackedSFixed32Field = 560;
  visitPackedSFixed64Field = 561;
  visitPackedSInt32Field = 562;
  visitPackedSInt64Field = 563;
  visitPackedUInt32Field = 564;
  visitPackedUInt64Field = 565;
  visitRepeated = 566;
  visitRepeatedBoolField = 567;
  visitRepeatedBytesField = 568;
  visitRepeatedDoubleField = 569;
  visitRepeatedEnumField = 570;
  visitRepeatedFixed32Field = 571;
  visitRepeatedFixed64Field = 572;
  visitRepeatedFloatField = 573;
  visitRepeatedGroupField = 574;
  visitRepeatedInt32Field = 575;
  visitRepeatedInt64Field = 576;
  visitRepeatedMessageField = 577;
  visitRepeatedSFixed32Field = 578;
  visitRepeatedSFixed64Field = 579;
  visitRepeatedSInt32Field = 580;
  visitRepeatedSInt64Field = 581;
  visitRepeatedStringField = 582;
  visitRepeatedUInt32Field = 583;
  visitRepeatedUInt64Field = 584;
  visitSingular = 585;
  visitSingularBoolField = 586;
  visitSingularBytesField = 587;
  visitSingularDoubleField = 588;
  visitSingularEnumField = 589;
  visitSingularFixed32Field = 590;
  visitSingularFixed64Field = 591;
  visitSingularFloatField = 592;
  visitSingularGroupField = 593;
  visitSingularInt32Field = 594;
  visitSingularInt64Field = 595;
  visitSingularMessageField = 596;
  visitSingularSFixed32Field = 597;
  visitSingularSFixed64Field = 598;
  visitSingularSInt32Field = 599;
  visitSingularSInt64Field = 600;
  visitSingularStringField = 601;
  visitSingularUInt32Field = 602;
  visitSingularUInt64Field = 603;
  visitUnknown = 604;
  wasDecoded = 605;
  where = 606;
  wireFormat = 607;
  with = 608;
  WrappedType = 609;
  written = 610;
  yday = 611;
}
